--- a/javajam.css
+++ b/javajam.css
@@ -1,4 +1,4 @@
-/*Project Name: JavaJam Coffee House (HW9)Author: Alyssa GarciaDate Last Modified: May 1, 2019*/* { box-sizing: border-box;
+/*Project Name: JavaJam Coffee House (HW9)Author: Alyssa GarciaDate Last Modified: May 1, 2019logo issues with small version */* { box-sizing: border-box;
 }
 /*Set the body*/body {	background-image: url(background.gif);
 	background-color: #FCEBB6;
